# reachy-consent

./: .env.example  .gitignore  README.md  main.py  plan.md  pyproject.toml
api/: server.py
consent_packs/: lap_chole.yaml
docs/phases/: README.md  phase-1.md  phase-2.md  phase-3.md
engine/: __init__.py  loader.py  models.py  state_machine.py  voice_bridge.py  voice_cues.py
robot_app/consent_assistant/: .gitignore  README.md  index.html  pyproject.toml
robot_app/consent_assistant/src/consent_assistant/: config.py  consent_motion.py  consent_session.py  console.py  main.py  openai_realtime.py  prompts.py  utils.py
robot_app/consent_assistant/src/consent_assistant/audio/: head_wobbler.py
robot_app/consent_assistant/src/consent_assistant/static/: index.html
robot_app/consent_assistant/src/consent_assistant/tools/: background_tool_manager.py  camera.py  core_tools.py  dance.py  do_nothing.py  head_tracking.py  move_head.py  play_emotion.py  stop_dance.py  stop_emotion.py  task_cancel.py  task_status.py
robot_app/consent_assistant/src/consent_assistant/vision/: processors.py
robot_app/consent_assistant/tests/: test_config_name_collisions.py  test_external_loading.py  test_openai_realtime.py
robot_app/consent_assistant/tests/audio/: test_head_wobbler.py
robot_app/consent_assistant/tests/tools/: test_background_tool_manager.py
robot_app/consent_assistant/tests/vision/: test_processors.py
scripts/: run_consent_cli.py  run_consent_voice.py
tests/: test_state_machine.py  test_voice_bridge.py
(+6 files in other folders)
